Ícone de estudante no index

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -34,6 +34,17 @@
                     </button>
                 </a>
             </div>
-            <div class="col-lg-6"></div>
+			<div class="col-lg-2">
+                <a href="<?= $this->baseUrl('secretario') ?>" accesskey="a" style="text-decoration: none;">
+                    <button class="btn btn-success btn-block btn-labeled" title="">
+                        <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                        <h6>
+							Cadastrar <br>
+                            <u>E</u>studante <br>
+                        </h6>
+                    </button>
+                </a>
+            </div>
+            <div class="col-lg-4"></div>
     </div>
 </div>
