Botão de CADASTRAR ESTUDANTE redirecionando p a tela de cadastro do estudante.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,50 +1,50 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-2"></div>
-            <div class="col-lg-2">
-                <a href="<?= $this->baseUrl('/admin-local') ?>" accesskey="c" style="text-decoration: none;">
-                    <button class="btn btn-success btn-block btn-labeled" title="">
-                        <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
-                        <h6>
-                            Administrador<br>
-                            <u>L</u>ocal
-                        </h6>
-                    </button>
-                </a>
-            </div>
-            <div class="col-lg-2">
-                <a href="<?= $this->baseUrl('admin-geral') ?>" accesskey="a" style="text-decoration: none;">
-                    <button class="btn btn-success btn-block btn-labeled" title="">
-                        <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
-                        <h6>
-                            Administrador<br>
-                            <u>G</u>eral
-                        </h6>
-                    </button>
-                </a>
-            </div>
-            <div class="col-lg-2">
-                <a href="<?= $this->baseUrl('secretario') ?>" accesskey="a" style="text-decoration: none;">
-                    <button class="btn btn-success btn-block btn-labeled" title="">
-                        <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
-                        <h6>
-                            Administrador<br>
-                            <u>S</u>ecretário
-                        </h6>
-                    </button>
-                </a>
-            </div>
-			<div class="col-lg-2">
-                <a href="<?= $this->baseUrl('secretario') ?>" accesskey="a" style="text-decoration: none;">
-                    <button class="btn btn-success btn-block btn-labeled" title="">
-                        <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
-                        <h6>
-							Cadastrar <br>
-                            <u>E</u>studante <br>
-                        </h6>
-                    </button>
-                </a>
-            </div>
-            <div class="col-lg-4"></div>
+        <div class="col-lg-2">
+            <a href="<?= $this->baseUrl('/admin-local') ?>" accesskey="c" style="text-decoration: none;">
+                <button class="btn btn-success btn-block btn-labeled" title="">
+                    <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                    <h6>
+                        Administrador<br>
+                        <u>L</u>ocal
+                    </h6>
+                </button>
+            </a>
+        </div>
+        <div class="col-lg-2">
+            <a href="<?= $this->baseUrl('admin-geral') ?>" accesskey="a" style="text-decoration: none;">
+                <button class="btn btn-success btn-block btn-labeled" title="">
+                    <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                    <h6>
+                        Administrador<br>
+                        <u>G</u>eral
+                    </h6>
+                </button>
+            </a>
+        </div>
+        <div class="col-lg-2">
+            <a href="<?= $this->baseUrl('secretario') ?>" accesskey="a" style="text-decoration: none;">
+                <button class="btn btn-success btn-block btn-labeled" title="">
+                    <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                    <h6>
+                        Administrador<br>
+                        <u>S</u>ecretário
+                    </h6>
+                </button>
+            </a>
+        </div>
+        <div class="col-lg-2">
+            <a href="<?= $this->baseUrl('cadastro-estudante') ?>" accesskey="a" style="text-decoration: none;">
+                <button class="btn btn-success btn-block btn-labeled" title="">
+                    <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                    <h6>
+                        Cadastrar <br>
+                        <u>E</u>studante <br>
+                    </h6>
+                </button>
+            </a>
+        </div>
+        <div class="col-lg-4"></div>
     </div>
 </div>
