--- a/application/views/scripts/cadastro-estudante/index.phtml
+++ b/application/views/scripts/cadastro-estudante/index.phtml
@@ -56,6 +56,14 @@
                                 <input type="password" class="form-control" id="bairro" placeholder="Bairro">
                             </div>
                             <div class="form-group">
+                                <label for="exampleInputPassword1">Anexe o Comprovante de Residência:</label>
+                                <input type="file" class="form-control" id="comprovanteResidencia" placeholder="Anexo documento que comprove a residência">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Anexe o Comprovante de Matrícula:</label>
+                                <input type="file" class="form-control" id="comprovanteMatricula" placeholder="Anexe o comprovante de matrícula">
+                            </div>
+                            <div class="form-group">
                                 <label for="exampleInputPassword1">Selecione o benefício:</label>
 
 
