--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -15,6 +15,9 @@
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/trajeto.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/datedropper.css") ?> />
+        <!--<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/Main.css") ?> />-->
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/my-style.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/style.css") ?> />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
@@ -46,6 +49,11 @@
                                 Concessões
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("apolice") ?>">
+                                Apólices
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -59,6 +67,7 @@
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
+        <!--<script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>-->
         <?= $this->headScript(); ?>
     </body>
 </html>
