Pagina de registro de manutenção

--- a/application/views/scripts/menuinicial/index.phtml
+++ b/application/views/scripts/menuinicial/index.phtml
@@ -13,6 +13,8 @@
       <a href="../public/parada-onibus" class="btn btn-block btn-primary">Gerenciar paradas de onibus</a>
       <br>
       <a href="../public/forma-pagamento" class="btn btn-block btn-primary">Gerenciar formas de pagamento</a>
+      <br>
+      <a href="../public/oficina-onibus" class="btn btn-block btn-primary">Gerenciar manutenções de frota</a>
 </div>
 </div>
 </div>
