--- a/application/views/scripts/cadastro-estudante/index.phtml
+++ b/application/views/scripts/cadastro-estudante/index.phtml
@@ -1,7 +1,4 @@
-<div class="container">
-    <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    
+<div class="container">    
     <div class="row">
         <div class="col-lg-3"></div>
         <div class="col-lg-6">
@@ -88,7 +85,7 @@
                             </div>
 
 
-                            <button type="submit" class="btn btn-block btn-primary">Cadastrar</button>
+                            <button type="button" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
                             <a href="../public/menuinicial" class="btn btn-block btn-danger btn-primary">Voltar</a>
 
                         </div>
