--- a/application/views/scripts/apolice/index.phtml
+++ b/application/views/scripts/apolice/index.phtml
@@ -13,7 +13,7 @@
                     <button class="btn btn-info clickable card-collapsed">Cadastrar</button>
                 </div>
                 <div class="card-body" style="display: none;">
-                    <form class="jumbontron" method="post"  style="background-color:rgba(0,0,0,0.2); color: white; padding: 15px;">
+                    <form class="jumbontron" method="post"  style="background-color:rgba(0,0,0,0.2); color: white; padding: 15px; border-radius: 0.25rem;">
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-lg-5">
@@ -25,34 +25,111 @@
                                     <label>Data de término:</label>
                                     <input type="text" class="form-control datedropper" id="data_fim" data-format="d/m/Y" data-large-mode="true" data-large-default="true" data-lock="from" data-translate-mode="true" data-lang="pt" data-theme="my-style">
                                 </div>
-                                <div class="col-lg-2"></div>
+                                <div class="col-lg-2">
+                                    <label>Valor:</label>
+                                    <input type="text" class="form-control" id="valor">
+                                </div>
                             </div>
                             <hr>
-                            <div class="row" style="padding-left: 10px;" >
-                                <div class="col-lg-5" id="teste11">
-                                    <label for="par1" id="label">Ônibus selecionados:</label>
-                                    <div class="row"  id="teste1" style="height: 150px; overflow: auto; border-style: solid; border-width: thin; border-radius:3%; border-color: rgba(255,255,255,0.3); ">
+
+
+                            <div class="row">
+                                <div class="dual-list list-left col-md-5">
+                                    <div class="well" style="background-color:rgba(0,0,0,0.2); color: white; padding: 15px; border-radius: 0.25rem;">
+                                        <div class="row">
+                                            <div class="col-md-10">
+                                                <div class="input-group">
+                                                    <span class="input-group-text fas fa-search"></span>
+                                                    <input type="text" name="SearchDualList" class="form-control" placeholder="pesquisar" />
+                                                </div>
+                                            </div>
+                                            <div class="col-md-2">
+                                                <div class="btn-group">
+                                                    <a class="btn btn-default selector" title="Selecionar todos"><i class="fas fa-circle-notch"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <table class="table" align="center" style="background-color: white; border-radius: 0.25rem;">
+                                            <tbody>
+                                                
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
-                                <div class="col-lg-2" style="padding-top: 60px; padding-left: 30px;  ">
-                                    <div class="row" style="padding-left: 45%; background-color:rgba(0,0,0,0.2); padding-top: 20px; ">
-                                        <div class="seta-1" id="seta1"></div>
-                                    </div>
-                                    <div class="row" style="padding-left: 45%; background-color:rgba(0,0,0,0.2); padding-top: 20px; padding-bottom: 20px;">
-                                        <div class="seta-2" id="seta2"></div>
+
+                                <div class="list-arrows col-md-1 text-center">
+                                    <button type="button" class="btn btn-default btn-sm move-left">
+                                        <span class="fas fa-angle-left"></span>
+                                    </button>
+
+                                    <button type="button" class="btn btn-default btn-sm move-right">
+                                        <span class="fas fa-angle-right"></span>
+                                    </button>
+                                </div>
+
+                                <div class="dual-list list-right col-md-6">
+                                    <div class="well" style="background-color:rgba(0,0,0,0.2); color: white; padding: 15px; border-radius: 0.25rem;">
+                                        <div class="row">
+<!--                                            <div class="col-md-2">
+                                                <div class="btn-group">
+                                                    <a class="btn btn-default selector" title="Selecionar todos"><i class="fas fa-circle-notch"></i></a>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <div class="input-group">
+                                                    <input type="text" name="SearchDualList" class="form-control" placeholder="pesquisar" />
+                                                    <span class="input-group-text fas fa-search"></span>
+                                                </div>
+                                            </div>-->
+                                        </div>
+                                        <table class="table onibus" align="center" style="background-color: white; border-radius: 0.25rem;">
+                                            <thead>
+                                                <tr>
+                                                    <th>Placa</th>
+                                                    <th>Ano</th>
+                                                    <th>Tipo</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <? foreach ($this->listaDosOnibusUrbanos as $onibus): ?>
+                                                    <tr style="cursor: pointer;">
+                                                        <td value="<?= $onibus['id'] ?>"><?= $onibus['placa'] ?></td>
+                                                        <td><?= $onibus['ano'] ?></td>
+                                                        <td><?= $onibus['tipo'] ?></td>
+                                                    </tr>
+                                                <? endforeach; ?>
+<br>
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
-                                <div class="col-lg-5">
-                                    <div class="form-group">
-                                        <label for="sel3" id="label">Ônibus:</label>
-                                        <select multiple class="form-control" id="sel3" style="height: 150px;">
-                                            <? foreach ($this->listaDosOnibusUrbanos as $onibus): ?>
-                                                <option  value="<?= $onibus['id_onibus_urbano'] ?>"><?= $onibus['placa']; ?></option>
-                                            <? endforeach; ?>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>	
+                            </div>
+
+                            <!--                            <div class="row" style="padding-left: 10px;" >
+                                                            <div class="col-lg-5" id="teste11">
+                                                                <label for="par1" id="label">Ônibus selecionados:</label>
+                                                                <div class="row"  id="teste1" style="height: 150px; overflow: auto; border-style: solid; border-width: thin; border-radius:3%; border-color: rgba(255,255,255,0.3); ">
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-lg-2" style="padding-top: 60px; padding-left: 30px;  ">
+                                                                <div class="row" style="padding-left: 45%; background-color:rgba(0,0,0,0.2); padding-top: 20px; ">
+                                                                    <div class="seta-1" id="seta1"></div>
+                                                                </div>
+                                                                <div class="row" style="padding-left: 45%; background-color:rgba(0,0,0,0.2); padding-top: 20px; padding-bottom: 20px;">
+                                                                    <div class="seta-2" id="seta2"></div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-lg-5">
+                                                                <div class="form-group">
+                                                                    <label for="sel3" id="label">Ônibus:</label>
+                                                                        <select multiple class="form-control" id="sel3" style="height: 150px;">
+                            <? foreach ($this->listaDosOnibusUrbanos as $onibus): ?>
+                                                                                                        <option  value="<?= $onibus['id'] ?>"><?= $onibus['placa']; ?> <?= $onibus['ano']; ?> <?= $onibus['tipo']; ?></option>
+                            <? endforeach; ?>
+                                                                        </select>
+                                                                </div>
+                                                            </div>
+                                                        </div>	-->
                             <hr>
                             <button class="btn btn-info btn-block cadastrar-apolice" type="button">
                                 Cadastrar
