--- a/application/views/scripts/cadastro-estudante/index.phtml
+++ b/application/views/scripts/cadastro-estudante/index.phtml
@@ -30,29 +30,29 @@
                                 <label for="exampleInputPassword1">Nome Completo</label>
                                 <input type="text" class="form-control" id="nomeCompleto" placeholder="Digite o nome completo">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formatar">
                                 <label for="exampleInputPassword1">Data de Nascimento:</label>
-                                <input type="date" class="form-control" id="dataNascimento" placeholder="Digite a data de nascimento">
+                                <input type="date" class="form-control" id="dataNascimento" placeholder="Digite a data de nascimento" maxlength="10" OnKeyPress="formatar('##/##/####', this)">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formatar SomenteNumero">
                                 <label for="exampleInputPassword1">CPF:</label>
-                                <input type="text" class="form-control" id="cpf" placeholder="Digite o cpf">
+                                <input type="text" class="form-control" id="cpf" placeholder="Digite o cpf" maxlength="14" OnKeyPress="formatar('###.###.###-##', this); return SomenteNumero(event)">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group SomenteNumero">
                                 <label for="exampleInputPassword1">RG:</label>
-                                <input type="text" class="form-control" id="rg" placeholder="Digite o RG">
+                                <input type="text" class="form-control" id="rg" placeholder="Digite o RG" maxlength="10" onkeypress='return SomenteNumero(event)'>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formatar SomenteNumero">
                                 <label for="exampleInputPassword1">Celular:</label>
-                                <input type="text" class="form-control" id="celular" placeholder="Digite o celular">
+                                <input type="text" class="form-control" id="celular" placeholder="Digite o ddd+celular" maxlength="12" OnKeyPress="formatar('##-#########', this); return SomenteNumero(event)">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Rua:</label>
                                 <input type="text" class="form-control" id="rua" placeholder="Digite a rua em que reside">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" SomenteNumero>
                                 <label for="exampleInputPassword1">N°:</label>
-                                <input type="text" class="form-control" id="numeroCasa" placeholder="N° da casa">
+                                <input type="text" class="form-control" id="numeroCasa" placeholder="N° da casa" maxlength="4" onkeypress="return SomenteNumero(event)">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Bairro:</label>
