--- a/application/views/scripts/cadastro-estudante/index.phtml
+++ b/application/views/scripts/cadastro-estudante/index.phtml
@@ -10,37 +10,37 @@
                         <div class="card-body">
 
 
-                            <div class="form-group">
+                            <div class="form-group validaUsuario">
                                 <label for="exampleInputEmail1">Usuário</label>
-                                <input type="text" class="form-control" id="nome_usuario" placeholder="Escolha um nome de usuário">
-                                <p class="help-block text-danger"></p>
-<!--                            <div class="alert alert-danger extensao hidden" role="alert" style="margin-top: 1%; margin-bottom: 0%">
-                                    Campo usuário é obrigatório! 
-                                </div>-->
+                                <input type="text" class="form-control" id="nome_usuario" placeholder="Escolha um nome de usuário" onchange="validaUsuario()">
+                                <p id="mensagem2" style="color:red" ></p>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group verify minemaxlenght">
                                 <label for="exampleInputEmail1">Senha</label>
-                                <input type="password" class="form-control" id="senha" placeholder="Escolha uma senha">
+                                <input type="password" class="form-control" id="senha" name=senha" placeholder="Escolha uma senha" onchange="minemaxlenght()" onchange=" verify()">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group verify minemaxlenght">
                                 <label for="exampleInputEmail1">Confirme a senha</label>
-                                <input type="password" class="form-control" id="confirmarSenha" placeholder="Confirme a senha">
+                                <input type="password" class="form-control" id="confirmarSenha" name="confsenha" placeholder="Confirme a senha" onchange="verify()">
+                                <p id="mensagem" style="color:red" ></p>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group Ncompleto">
                                 <label for="exampleInputPassword1">Nome Completo</label>
-                                <input type="text" class="form-control" id="nomeCompleto" placeholder="Digite o nome completo">
+                                <input type="text" class="form-control" id="nomeCompleto" placeholder="Digite o nome completo" onchange="Ncompleto()">
+                                <p id="mensagem1" style="color:red" ></p>
                             </div>
                             <div class="form-group formatar">
                                 <label for="exampleInputPassword1">Data de Nascimento:</label>
                                 <input type="date" class="form-control" id="dataNascimento" placeholder="Digite a data de nascimento" maxlength="10" OnKeyPress="formatar('##/##/####', this)">
                             </div>
-                            <div class="form-group formatar SomenteNumero">
+                            <div class="form-group formatar SomenteNumero cpf">
                                 <label for="exampleInputPassword1">CPF:</label>
-                                <input type="text" class="form-control" id="cpf" placeholder="Digite o cpf" maxlength="14" OnKeyPress="formatar('###.###.###-##', this); return SomenteNumero(event)">
+                                <input type="text" class="form-control" id="cpf" placeholder="Digite o cpf" maxlength="14" onchange="validaCPF()" OnKeyPress="formatar('###.###.###-##', this); return SomenteNumero(event)">
+                                <p id="mensagem3" style="color:red" ></p>
                             </div>
                             <div class="form-group SomenteNumero">
                                 <label for="exampleInputPassword1">RG:</label>
-                                <input type="text" class="form-control" id="rg" placeholder="Digite o RG" maxlength="10" onkeypress='return SomenteNumero(event)'>
+                                <input type="text" class="form-control" id="rg" placeholder="Digite o RG" maxlength="10" required="required" onkeypress='return SomenteNumero(event)'>
                             </div>
                             <div class="form-group formatar SomenteNumero">
                                 <label for="exampleInputPassword1">Celular:</label>
@@ -70,22 +70,24 @@
                                 <label for="exampleInputPassword1">Selecione o benefício:</label>
 
 
-                                <div class="custom-control custom-checkbox ">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                    <label class="custom-control-label" for="customCheck1">Nenhum</label>
+                                <div class="custom-control custom-checkbox verificacheckbox">
+                                    <input type="checkbox" class="custom-control-input" id="customCheck1" onClick="verificacheckbox()">
+                                    <label class="custom-control-label" id="nenhum" for="customCheck1">Nenhum</label>
                                 </div>
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                    <label class="custom-control-label" for="customCheck1">Meia Passagem</label>
+                                    <input type="checkbox" class="custom-control-input" id="customCheck2">
+                                    <label class="custom-control-label" id="meiaPassagem" for="customCheck2">Meia Passagem</label>
                                 </div>
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                    <label class="custom-control-label" for="customCheck1">Isenção</label>
+                                    <input type="checkbox" class="custom-control-input" id="customCheck3">
+                                    <label class="custom-control-label" id="isencao" for="customCheck3">Isenção</label>
                                 </div>
+                                <p id="mensagem4" style="color:red" ></p>
+
                             </div>
 
-
-                            <button type="button" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
+                            <p id="mensagem" style="color:red" ></p>
+                            <button type="button" id="cadastro" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
                             <a href="../public/menuinicial" class="btn btn-block btn-danger btn-primary">Voltar</a>
 
                         </div>
